--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1{color:#ff0000;
+h1{color:#212121;
    font-family:poppins;
   font-size: 60px;
 padding-top: 30px;
@@ -7,7 +7,7 @@ text-transform:uppercase;
 letter-spacing:10px;
 font-weight:700}
 
-h2{color:#ffffff;
+h2{color:#212121;
    font-family:poppins;
   font-size:20px;
 letter-spacing:4px;
@@ -22,23 +22,23 @@ font-weight:400}
   display: block;}
 
 a:link {
-  color:#ffffff;
+  color:#212121;
   text-decoration: none;
   font-size:20px}
 
 a:visited {
-  color:#ffffff;}
+  color:#212121;}
   
 a:hover {
   text-decoration:none;
   color:#ff0000}
 
 a:active {
-  color: #ff0000;}
+  color: #2f65b2;}
   
-  .button{color: #ffffff;
+  .button{color: #2f65b2;
   text-decoration:none;
-  border:6px solid #ffffff;
+  border:6px solid #2f65b2;
   font-size:20px;
   font-family:poppins;
   text-transform:uppercase;
@@ -50,5 +50,5 @@ a:active {
   width: 400px; 
  }
 
-.button:hover{border:6px solid #ff0000;
+.button:hover{border:6px solid #212121;
    text-decoration:none;} 
