--- a/style.css
+++ b/style.css
@@ -51,4 +51,10 @@ a:active {
  }
 
 .button:hover{border:6px solid #212121;
-   text-decoration:none;} 
+   text-decoration:none;}
+
+
+.sfondo {background-image: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg), url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); 
+             background-position: left top, right bottom; 
+             background-repeat: no-repeat, no-repeat;
+             background-size: 200%
