--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,800&display=swap');
+</style>
+
 h1{color:#212121;
    font-family:poppins;
   font-size: 60px;
