--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:);
+<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
 
 h1{color:#212121;
