--- a/style.css
+++ b/style.css
@@ -65,4 +65,4 @@ a:active {
 .sfondo {background-image: url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo1.svg), url(https://raw.githubusercontent.com/AlcibiadeR/portfolio/main/sfondo2.svg); 
              background-position: left top, right bottom; 
              background-repeat: no-repeat, no-repeat;
-             background-size: 200%
+   background-size: 200%}
